[gd_scene load_steps=6 format=2]

[ext_resource path="res://game_map/GameMap.tscn" type="PackedScene" id=1]
[ext_resource path="res://MainScreen.gd" type="Script" id=2]
[ext_resource path="res://Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://EnemyUI.tscn" type="PackedScene" id=4]
[ext_resource path="res://ShopUI.tscn" type="PackedScene" id=5]

[node name="MainScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Map" parent="." instance=ExtResource( 1 )]

[node name="Hero" parent="." instance=ExtResource( 3 )]
position = Vector2( 64, 960 )

[node name="EnemyUI" parent="." instance=ExtResource( 4 )]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -150.0
margin_top = -192.0
margin_right = 150.0
margin_bottom = 192.0

[node name="VictoryDialog" type="AcceptDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.5
margin_top = -37.5
margin_right = 100.5
margin_bottom = 37.5
window_title = "Victory"
dialog_text = "You've beaten The Sourcerer!
The kingdom is safe now!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LossDialog" type="AcceptDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -146.5
margin_top = -37.5
margin_right = 146.5
margin_bottom = 37.5
window_title = "Loss"
dialog_text = "The Sourcerer performed his horrible ritual!
The world is doomed now!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -80.0
margin_bottom = 40.0
grow_horizontal = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Turns" type="Label" parent="VBoxContainer"]
margin_right = 90.0
margin_bottom = 14.0
grow_horizontal = 0
text = "Turns: 21/21"
align = 2

[node name="TurnSign" type="Label" parent="VBoxContainer"]
margin_top = 18.0
margin_right = 90.0
margin_bottom = 32.0
grow_horizontal = 0
text = "Turn sign: A"
align = 2

[node name="Gold" type="Label" parent="VBoxContainer"]
margin_top = 36.0
margin_right = 90.0
margin_bottom = 50.0
grow_horizontal = 0
text = "Gold: 0G"
align = 2

[node name="Damage" type="Label" parent="VBoxContainer"]
margin_top = 54.0
margin_right = 90.0
margin_bottom = 68.0
grow_horizontal = 0
text = "Hero power: 1"
align = 2

[node name="ShopUI" parent="." instance=ExtResource( 5 )]
visible = false
margin_left = -146.5
margin_right = 146.5
[connection signal="moved" from="Hero" to="." method="_on_Hero_moved"]
[connection signal="dead" from="EnemyUI" to="." method="_on_Enemy_dead"]
[connection signal="enemy_hit" from="EnemyUI" to="." method="_on_enemy_hit"]
[connection signal="confirmed" from="VictoryDialog" to="." method="_on_end_game_confirmed"]
[connection signal="confirmed" from="LossDialog" to="." method="_on_end_game_confirmed"]
[connection signal="interaction_finished" from="ShopUI" to="." method="_on_ShopUI_interaction_finished"]
[connection signal="potion_used" from="ShopUI" to="." method="_on_ShopUI_potion_used"]
